--- a/Phone/main/res/values/color.xml
+++ b/Phone/main/res/values/color.xml
@@ -13,6 +13,8 @@
 	<color name="gray">#CCCCCC</color>
 	<color name="lightRed">#1fff0000</color>
 	<color name="lightBlue">#d0025D96</color>
+	<color name="transparentGray">#50000000</color>
+	<color name="none">#00000000</color>
 	
     <!-- Old -->
     <color name="primary">#00A8BF</color>
