--- a/Phone/main/res/drawable/rounded_table_corners_shape.xml
+++ b/Phone/main/res/drawable/rounded_table_corners_shape.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#fFfFfF"/>
-    <stroke android:color="#c0c8cc"
+    <stroke android:color="#dce3e5"
         	android:width="1dp"/>
-    <corners android:radius="6px"/>
+    <corners android:radius="4px"/>
     <padding android:left="14dp" android:top="14dp" android:right="14dp" android:bottom="14dp" /> 
 </shape>
