--- a/Phone/main/res/values/dimens.xml
+++ b/Phone/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="content_padding">8dp</dimen>
     <dimen name="light_text_size">12sp</dimen>
     <dimen name="very_light_text_size">10sp</dimen>
+    
     <!-- Navigation Menu -->
     <dimen name="nav_menu_shadow_width">15dp</dimen>
     <dimen name="nav_menu_offset">48dp</dimen>
@@ -16,6 +17,9 @@
     <dimen name="call_to_actions_padding">15dp</dimen>
     <dimen name="orange_button_left_right_padding">30dp</dimen>
     <dimen name="orange_button_margin_top">40dp</dimen>
+    
+    <!--  Login Bottom Buttons -->
+    <dimen name="login_bottom_button_height">50dp</dimen>
     
     <!-- Discover Font Sizes -->
     <dimen name="title_max">27sp</dimen>
