--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -52,7 +52,13 @@
         <item name="android:paddingBottom">@dimen/call_to_actions_padding</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textStyle">bold</item>
-        
     </style>
     
+    <style name="login_bottom_bar_button">
+        <item name="android:padding">@dimen/content_padding</item>
+        <item name="android:textSize">@dimen/small_copy_min</item>
+        <item name="android:background">@drawable/login_bottom_bar_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:height">@dimen/login_bottom_button_height</item>
+    </style>    
 </resources>
