--- a/Phone/main/res/layout/push_now_available.xml
+++ b/Phone/main/res/layout/push_now_available.xml
@@ -46,9 +46,7 @@
         android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:text="@string/account_home" 
-    	android:textColor="@color/blue_link"
-        android:textSize="@dimen/body_copy_max"
-    	android:textStyle="bold"
+    	style="@style/blue_hyperlink"
   		android:layout_marginRight="@dimen/forms_inner_padding"
     	android:layout_marginLeft="@dimen/forms_inner_padding"
   		android:layout_below="@+id/manage_alerts_button"
