--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -52,7 +52,12 @@
         <item name="android:paddingBottom">@dimen/call_to_actions_padding</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textStyle">bold</item>
-        
+    </style>
+    
+    <style name="blue_hyperlink">
+        <item name="android:textColor">@color/blue_link</item>
+        <item name="android:textSize">@dimen/body_copy_max</item>
+        <item name="android:textStyle">bold</item>
     </style>
     
 </resources>
