--- a/Phone/main/res/layout/login_start.xml
+++ b/Phone/main/res/layout/login_start.xml
@@ -14,20 +14,22 @@
 			 
 	    <RelativeLayout
 	       	android:layout_width="fill_parent"
-	       	android:layout_height="wrap_content" >
+	       	android:layout_height="wrap_content"
+	      	android:layout_marginRight="@dimen/groups_of_elements_padding"
+	       	android:focusable="true"
+        	android:focusableInTouchMode="true" >
 	        
 	        <View
-               android:id="@+id/padding_element"
+               android:id="@+id/padding_element_top"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/groups_of_elements_padding"
-			   android:visibility="invisible"/>
+               android:visibility="invisible"/>
 	        
 	        <RelativeLayout
+	            android:id="@+id/login_table"
 	            android:layout_width="fill_parent"
-	            android:layout_below="@+id/padding_element"
+	            android:layout_below="@+id/padding_element_top"
 	            android:layout_height="wrap_content"
-	            android:layout_marginBottom="@dimen/groups_of_elements_padding"
-	            android:layout_marginRight="@dimen/groups_of_elements_padding"
 	            android:background="@drawable/rounded_table_corners_shape" >
 	            
 	            
@@ -35,15 +37,16 @@
 	                android:id="@+id/discoverLogo"
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_marginTop="16dp"
-	                android:layout_below="@+id/padding_element"
+	                android:layout_marginTop="@dimen/table_inner_padding"
 	                android:src="@drawable/discover_blk_logo_login" 
-	                android:layout_centerHorizontal="true"/>
+	                android:layout_centerHorizontal="true"
+	                android:contentDescription="@string/discover_copyright_text"/>
 	            
 		    	<TextView
 		            android:id="@+id/error_text_view"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
+		            android:layout_marginTop="@dimen/groups_of_elements_padding"
 		            android:textColor="@color/red"
 		            android:layout_below="@+id/discoverLogo"
 		            android:visibility="gone" />
@@ -53,7 +56,7 @@
 		            android:typeface="sans"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:layout_marginTop="24dp"
+		            android:layout_marginTop="@dimen/table_inner_padding"
 		            android:layout_below="@+id/error_text_view"
 		            android:text="@string/user_id"
 		            android:textAppearance="?android:attr/textAppearanceMedium"
@@ -65,7 +68,7 @@
 		            android:layout_width="match_parent"
 		            android:layout_height="48dp"
 		            android:layout_below="@+id/user_id_label"
-		            android:background="@drawable/plain_edit_text"
+		            android:background="@drawable/edit_text_default"
 		            android:ems="10"
 		            android:hint="@string/username_placeholder"
 		            android:imeOptions="actionNext"
@@ -88,6 +91,7 @@
 		        
 		        <TextView
 		            android:id="@+id/toggle_password_visibility_label"
+		            android:padding="@dimen/content_padding"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_toRightOf="@+id/password_label"
@@ -102,7 +106,7 @@
 		            android:layout_width="match_parent"
 		            android:layout_height="48dp"
 		            android:layout_below="@+id/password_label"
-		            android:background="@drawable/plain_edit_text"
+		            android:background="@drawable/edit_text_default"
 		            android:hint="@string/password_placeholder"
 		            android:inputType="textPassword"
 		            android:maxLength="@integer/MAX_PASSWORD_LENGTH"
@@ -124,6 +128,7 @@
 			        android:id="@+id/remember_user_id_button"
 			        android:layout_width="25dip"
 			        android:layout_height="25dip"
+			        android:contentDescription="@string/remember_user_id"
 			     	android:layout_alignParentRight="true"
 			     	android:layout_marginTop="14dp"
 			     	android:layout_below="@+id/password_field"
@@ -241,6 +246,12 @@
 				    android:text="@string/discover_copyright_text" />
 
 	        </RelativeLayout>
+	        <View
+               android:id="@+id/padding_element_bottom"
+               android:layout_width="fill_parent"
+               android:layout_height="@dimen/groups_of_elements_padding"
+			   android:visibility="invisible"
+			   android:layout_below="@+id/login_table"/>
 	    </RelativeLayout>
 	</ScrollView>
 			
@@ -273,8 +284,7 @@
 		    android:layout_height="wrap_content"
 		    android:layout_weight=".33"
 		    style="@style/login_bottom_bar_button"
-		    android:text="@string/register_now"
-		    android:onClick="registerNewUser" />
+		    android:text="@string/register_now"/>
 
       </LinearLayout>
 	        
