--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -68,5 +68,32 @@
         <item name="android:background">@drawable/login_bottom_bar_button</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:height">@dimen/login_bottom_button_height</item>
-    </style>    
+    </style>  
+    
+    <style name="title_copy">
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+	    <item name="android:textColor">#293033</item>
+	    <item name="android:textStyle">bold</item>
+    </style>
+    
+    <style name="body_copy">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+	    <item name="android:textColor">#3d484d</item>
+    </style>
+    
+    <style name="small_copy">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+	  	<item name="android:textColor">#576166</item>
+    </style>
+    
+    <style name="field_copy">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+	  	<item name="android:textColor">#8a9499</item>
+    </style>
+   
+    <style name="field_stroke">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+	  	<item name="android:textColor">#dce3e5</item>
+    </style>
+        
 </resources>
