--- a/Phone/main/res/values/color.xml
+++ b/Phone/main/res/values/color.xml
@@ -31,7 +31,7 @@
     <color name="field_stroke">#dce3e5</color>
     <color name="header_bg">#d8dde0</color>
     <color name="sub_header_bg">#e8eced</color>
-    <color name="stroke_rulink_link">#c0c8cc</color>
+    <color name="stroke_ruling_line">#c0c8cc</color>
     
     <!-- Discover Secondary Colors -->
     <color name="orange_gradient_light">#ed4b0b</color>
