--- a/Phone/main/res/layout/action_bar_menu_layout.xml
+++ b/Phone/main/res/layout/action_bar_menu_layout.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="48dp"
-    android:background="@drawable/action_bar_background"
-    android:paddingRight="@dimen/between_related_elements_padding">
+    android:background="@drawable/action_bar_background">
     
 	<ImageView
 	    android:id="@+id/navigation_button"
@@ -11,25 +10,30 @@
 	    android:layout_height="wrap_content"
 	    android:textColor="@color/white"
 	    android:textSize="@dimen/title_max"
-	    android:textStyle="bold"
-	    android:padding="5dp"
+	    android:textStyle="bold" 
+	    android:padding="12dp"
 	    android:layout_above="@+id/gradient_line"
 	    android:background="@drawable/square_button"
 	    android:layout_alignParentLeft="true"
 	    android:layout_marginBottom="3dp"
-	    android:layout_marginLeft="@dimen/between_related_elements_padding"/>
+	    android:src="@drawable/sliding_drawer_white_icons"
+	    android:layout_marginLeft="@dimen/between_related_elements_padding"
+	    android:visibility="gone"/>
 	
 	<ImageView
-	    android:id="@+id/back_button"
+	     android:id="@+id/navigation_back_button"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:textColor="@color/white"
 	    android:textSize="@dimen/title_max"
-	    android:textStyle="bold"
-	    android:padding="5dp"
+	    android:textStyle="bold" 
+	    android:padding="12dp"
 	    android:layout_above="@+id/gradient_line"
 	    android:background="@drawable/square_button"
 	    android:layout_alignParentLeft="true"
+	    android:layout_marginBottom="3dp"
+	    android:src="@drawable/back_arrow_white_icon"
+	    android:layout_marginLeft="@dimen/between_related_elements_padding"
 	    android:visibility="gone"/>
 	
 	<TextView
@@ -37,17 +41,16 @@
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:maxLines="1"
-	    android:text="title"
+	    android:text="Manage Text &amp; Push Alerts"
 	    android:layout_marginTop="@dimen/table_inner_padding"
 	    android:textSize="@dimen/body_copy_min"
 	    android:textColor="@color/title"
 	    android:gravity="center"
 	    android:textStyle="bold"
-	   	android:layout_centerInParent="true"
 	    android:layout_alignParentTop="true"
 	    android:layout_toLeftOf="@+id/logout_button"
 	    android:layout_toRightOf="@+id/navigation_button"
-	    android:visibility="visible"/> 
+	    android:visibility="gone"/> 
 	    
 	<ImageView
 	    android:id="@+id/discover_logo"
@@ -70,14 +73,18 @@
 	    android:text="@string/log_out" 
 	    style="@style/white_button"
 	    android:layout_marginBottom="5dp"
-	    android:layout_marginTop="3dp"/>
+	    android:layout_marginTop="3dp"
+	    android:layout_marginRight="@dimen/between_related_elements_padding"
+	    android:visibility="gone"/>
 	
 	<ImageView
 	    android:id="@+id/gradient_line"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:src="@drawable/gradiant_line"
-	    android:layout_centerInParent="true"
+	    android:background="@color/stroke_ruling_line"
+	    android:layout_alignParentRight="true"
+	    android:layout_alignParentLeft="true"
 	    android:layout_alignParentBottom="true"/>
 	
 </RelativeLayout>
