--- a/Phone/main/res/values/strings_login.xml
+++ b/Phone/main/res/values/strings_login.xml
@@ -48,4 +48,7 @@
     <string name="vertical_separator">
         |
     </string>
+    <string name="logout_sucess">
+        You are now logged out. Thank you for using Discover Mobile.
+    </string>
 </resources>
