--- a/Phone/main/res/layout/action_bar_menu_layout.xml
+++ b/Phone/main/res/layout/action_bar_menu_layout.xml
@@ -45,7 +45,7 @@
 	    android:visibility="gone"/> 
 	    
 	<ImageView
-	    android:id="@+id/discover_logo"
+	    android:id="@+id/action_bar_discover_logo"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_centerInParent="true"
